<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/reid_zura_unsplash">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/latTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:text="@string/latitude"
            android:textColor="#ffffff"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/lonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:text="@string/longitude"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/accuracy"/>

        <TextView
            android:id="@+id/tvAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/altitude"/>

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingBottom="10dp"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="@string/address"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        android:theme="@style/ProgressBarStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_credit"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>